test/syc/good/add.c
/*
 * Addition
 */

int add_const(void)
{
	return 1 + 2 + 3;
}
