test/syc/bad/attrusrpar.c
/*
 * Attribute 'usr' should not have any arguments
 */

void foo(void) __attribute__((usr((1))))
{
}

